--- a/loteria/index.html
+++ b/loteria/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="loteria.css" />
     <script src="loteria.js"></script>
+    <script src="symbols.js"></script>
+    <script src="line.js"></script>
   </head>
   <body>
     <canvas id="canvas" width="800" height="600" role="presentation"
